--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,23 +13,21 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".activity.MainActivity"
-            android:screenOrientation="portrait">
+            android:name=".activity.main.MainActivity"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ChooseProvinceActivity" />
 
-        <service
-            android:name=".service.MyService"
-            android:enabled="true"
-            android:exported="true" />
-
-        <activity android:name=".activity.ChooseCityActivity" />
-        <activity android:name=".activity.ChooseCountyActivity"></activity>
+        <activity android:name=".activity.choose.ChooseProvinceActivity" />
+        <activity android:name=".activity.choose.ChooseCityActivity" />
+        <activity android:name=".activity.choose.ChooseCountyActivity" />
+        <service android:name=".service.MyService" />
     </application>
 
 </manifest>
